--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 <div class="container-fluid">
   <div class="row">
     <div class="col-12 col-lg-6 px-0">
-      <img class="img-fluid w-100" src="./img/img-de-entrada/rescate_perritos1.jpg" alt="imagen info">
+      <img class="img-fluid w-100 h-100" src="./img/img-de-entrada/rescate_perritos1.jpg" alt="imagen info">
     </div>
     <div class="col-12 col-lg-6 p-5">
       <h2>CENTRO DE RESCATES HUELLITAS</h2>
