Cambiando el nombre de los archivos html

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 <a class="nav-link" href="./page/contacto.html" target="_blank">Contacto</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="./page/AboutUs.html" target="_blank">Nosotros</a>
+                <a class="nav-link" href="./page/aboutUs.html" target="_blank">Nosotros</a>
               </li>
               <li class="nav-item mx-1 button-login">
                 <a
